2007-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-bbc.el (shimbun-bbc-x-face-alist): New.

	* sb-tech-on.el (shimbun-multi-next-url): Fix regexp matching next
	buttons.
	(shimbun-clear-contents): Fix regexp matching next buttons to be
	removed; remove alignment spec from images.

2007-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-yomiuri.el (shimbun-yomiuri-get-top-header): Fix regexp.

2007-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Don't miss the 2nd
	section of articles in editorial group.

2007-10-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-prepare-article): Follow site changes in
	editorial and tenjin groups; give up removing shop logos in book*
	groups; remove furigana in tamate subgroup; remove garbage after
	images; don't remove </*> tags at the bottom of article.

2007-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Don't remove links to
	related news or topics (that should never be removed.  cf.
	http://sankei.jp.msn.com/affairs/crime/071026/crm0710260934002-n1.htm).

2007-10-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-clear-contents): Extract contents from
	a page composed in unusual format.  cf. http://dealbook.blogs.nytimes.\
	com/2007/10/24/3000-layoffs-today-more-tomorrow/index.html?ex=13510512\
	00&en=07a270b9f7c0bb04&ei=5088&partner=rssnyt&emc=rss

	* sb-itmedia.el (shimbun-get-headers): Update regexp.
	(shimbun-clear-contents): Don't use too complicated regexp wasting cpu.

2007-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nytimes.el (shimbun-nytimes-next-url): New variable.
	(shimbun-make-contents): Reset it before fetching contents.
	(shimbun-multi-next-url): Set it to the next url.
	(shimbun-nytimes-clear-contents): New function.
	(shimbun-clear-contents): Use it; retry fetching contents if it fails.

2007-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>
