@@ -1,3 +1,9 @@
+2007-11-03  David Hansen  <david.hansen@gmx.net>
+
+	* sb-infoshop.el (shimbun-rss-build-message-id): New function.
+
+	* sb-weeklyworldnews.el: Remove.  cf. [emacs-w3m:09750]
+
 2007-11-02  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* sb-bbc.el (shimbun-bbc-x-face-alist): New.
